@@ -1,27 +1,23 @@
 package be.vlaanderen.vip.mock.magda.inventory;
 
-import lombok.RequiredArgsConstructor;
-import org.apache.commons.io.FilenameUtils;
-import org.apache.commons.io.IOUtils;
+import static java.util.function.Predicate.not;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@RequiredArgsConstructor
+import org.apache.commons.io.FilenameUtils;
+import org.apache.commons.io.IOUtils;
+
 public class ResourceFinder {
-
     private static final String MAGDA_SIMULATOR = "magda_simulator/";
-
-    private final Class<?> base;
 
     public InputStream loadSimulatorResource(String type, String testResource) {
         String path = "/" + MAGDA_SIMULATOR + type + "/" + testResource;
 
-        return base.getResourceAsStream(path);
+        return getClass().getResourceAsStream(path);
     }
 
     public List<TestcaseService> listServices(String type) throws IOException {
@@ -41,7 +37,7 @@ public class ResourceFinder {
     }
 
     private List<String> enumerate(String directory) throws IOException {
-        try (InputStream content = base.getClassLoader().getResourceAsStream(directory)) {
+        try (InputStream content = getClass().getClassLoader().getResourceAsStream(directory)) {
             if (content != null) {
                 return IOUtils.readLines(content, StandardCharsets.UTF_8);
             } else {
@@ -51,16 +47,24 @@ public class ResourceFinder {
     }
 
     private List<String> enumerateFiles(String directory) throws IOException {
-        return enumerate(directory).stream().filter(ResourceFinder::isFile).collect(Collectors.toList());
+        return enumerate(directory).stream()
+                                   .filter(this::isFile)
+                                   .toList();
     }
 
     private List<String> enumerateDirectories(String directory) throws IOException {
-        return enumerate(directory).stream().filter(name -> !isFile(name)).collect(Collectors.toList());
+        return enumerate(directory).stream()
+                                   .filter(not(this::isFile))
+                                   .toList();
     }
 
-    private static boolean isFile(String filename) {
+    private boolean isFile(String filename) {
         String extension = FilenameUtils.getExtension(filename);
-        return extension.equals("xml") || extension.equals("json") || extension.equals("txt") || extension.equals("pdf") || extension.equals("jpg");
+        return extension.equals("xml") || 
+               extension.equals("json") || 
+               extension.equals("txt") || 
+               extension.equals("pdf") || 
+               extension.equals("jpg");
     }
 
 }
